# caddy_ai2_sensors_SBG_IG-500N

./: CMakeLists.txt  README.md  package.xml
docs_official/SDK_3.2/USB/: autorun.inf
docs_official/SDK_3.2/USB/Ekinox/Documentations/Magnetic Calibration/sbgIronCalibration Library/html/: annotated.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  iron_calibration_version_8h_source.html
docs_official/SDK_3.2/USB/Ekinox/Documentations/Protocol Library/sbgECom Library/: sbgECom Library.chm
docs_official/SDK_3.2/USB/Ekinox/Software Development/sbgECom/: sbgECom.lib  sbgEComd.lib
docs_official/SDK_3.2/USB/Ekinox/Software Development/sbgECom/src/: sbgCommon.h  sbgECom.c  sbgECom.h  sbgEComCmds.h  sbgEComLib.h  sbgEComVersion.h
docs_official/SDK_3.2/USB/Ekinox/Software Development/sbgIronCalibration/src/: ironCalibrationCommon.h  ironCalibrationVersion.h  ironComputation.c  point.h  pointList.c  sbgCommon.h  sbgIronCalibration.c
docs_official/SDK_3.2/USB/IG-Devices/Documentations/Magnetic Calibration/sbgIronCalibration Library/: sbgIronCalibration Library.chm
docs_official/SDK_3.2/USB/IG-Devices/Documentations/Protocol Library/sbgCan Library/: sbgCan Library.chm
docs_official/SDK_3.2/USB/IG-Devices/Drivers/pcan/x64/: Pcan_usb.inf  Pcan_usb.sys  dpinst.xml  pcan_usb.cat
docs_official/SDK_3.2/USB/IG-Devices/Drivers/pcan/x86/: Pcan_usb.inf  Pcan_usb.sys  pcan_usb.cat
docs_official/SDK_3.2/USB/IG-Devices/Drivers/usbToUart/: dpinst.xml  sbgvcp.cat  sbgvcp.inf
docs_official/SDK_3.2/USB/IG-Devices/Software Development/Examples/ig500Continuous/: ig500Continuous
docs_official/SDK_3.2/USB/IG-Devices/Software Development/Examples/labviewExample/: labviewExample.lvproj  testAttitude.vi
docs_official/SDK_3.2/USB/IG-Devices/Software Development/Examples/matlabExample/: matlabExample.m  testSbgMatLab.m
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgCan/: PCANBasic_enu.chm  sbgCan.lib  sbgCand.lib
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgCan/src/: sbgCan.c  sbgCan.h  sbgCanVersion.h  sbgCommon.h
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgCom/: sbgComDataLog.lib  sbgComDataLogd.lib  sbgComSerial.lib  sbgComSeriald.lib
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgCom/src/: sbgComVersion.h  sbgCommon.h
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgIronCalibration/src/: ironCalibMath.c  ironCalibMath.h  ironComputation.h  point.c  pointList.h  sbgIronCalibration.h
docs_official/SDK_3.2/USB/IG-Devices/Software Development/sbgLabView/sbgLabView/: close.vi  getVersion.vi  init.vi
meshes/: IG-500N-B.PLY  IG-500N-B.STL
params/: sbg.yaml
ros1_old_package/sbg/include/sbg/: sbg.h
ros1_old_package/sbg/src/libsbg/: sbg.cpp
ros1_old_package/sbg/src/nodes/: sbg_node.cpp
rviz2/: imu.rviz  imu_ned.rviz
sdk/sbgCom/: CMakeLists.txt  sbgComConfig.cmake.in
sdk/sbgCom/src/comWrapper/: comSerialUnix.c
sdk/sbgCom/src/protocol/: commandsOutput.c
src/: sbg_node.cpp
startup/: initenv.sh
(+434 files in other folders)
